[package]
name = "floor-borker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.10"
# openssl = "0.10.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
serialport = "4.2.0"
tungstenite = "0.17.3"
